samples/_failures_safe/1761563010_bd1a38_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06d67157.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_06d67157.c:163:9: error: expected declaration or statement at end of input
  163 |         lexer->position++;
      |         ^~~~~
./samples/SAFE/__tmp_06d67157.c:163:9: error: expected declaration or statement at end of input
